--- a/EExamWebApp/EExamWebApp.csproj
+++ b/EExamWebApp/EExamWebApp.csproj
@@ -146,14 +146,22 @@
         <Compile Include="App_Start\RouteConfig.cs" />
         <Compile Include="Controllers\AccountController.cs" />
         <Compile Include="Controllers\AdminController.cs" />
+        <Compile Include="Controllers\BaseController.cs" />
+        <Compile Include="Controllers\CourseController.cs" />
+        <Compile Include="Controllers\ErrorController.cs" />
         <Compile Include="Controllers\HomeController.cs" />
         <Compile Include="Data\AppDbContext.cs" />
+        <Compile Include="Filters\AuthorizeUserTypeAttribute.cs" />
         <Compile Include="Global.asax.cs">
             <DependentUpon>Global.asax</DependentUpon>
         </Compile>
         <Compile Include="Migrations\202312290742458_Initial.cs" />
         <Compile Include="Migrations\202312290742458_Initial.Designer.cs">
           <DependentUpon>202312290742458_Initial.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Migrations\202312301059022_NameLastNameAddedToUser.cs" />
+        <Compile Include="Migrations\202312301059022_NameLastNameAddedToUser.Designer.cs">
+          <DependentUpon>202312301059022_NameLastNameAddedToUser.cs</DependentUpon>
         </Compile>
         <Compile Include="Migrations\Configuration.cs" />
         <Compile Include="Models\Course.cs" />
@@ -164,6 +172,7 @@
         <Compile Include="Models\User.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Seeders\DbInitializer.cs" />
+        <Compile Include="ViewModels\CourseViewModel.cs" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="Content\bootstrap-theme.css" />
@@ -195,7 +204,14 @@
         <Content Include="Views\Admin\DeleteUser.cshtml" />
         <Content Include="Views\Admin\EditUser.cshtml" />
         <Content Include="Views\Admin\ListUsers.cshtml" />
+        <Content Include="Views\Course\AssignStudents.cshtml" />
+        <Content Include="Views\Course\AssignTeacher.cshtml" />
+        <Content Include="Views\Course\CreateCourse.cshtml" />
+        <Content Include="Views\Course\Index.cshtml" />
+        <Content Include="Views\Course\_AvailableStudentsPartial.cshtml" />
+        <Content Include="Views\Course\_CurrentStudentsPartial.cshtml" />
         <Content Include="Views\Home\ListCourses.cshtml" />
+        <Content Include="Views\Shared\AccessDenied.cshtml" />
         <Content Include="Web.config" />
         <Content Include="Web.Debug.config">
             <DependentUpon>Web.config</DependentUpon>
@@ -230,6 +246,9 @@
     <ItemGroup>
       <EmbeddedResource Include="Migrations\202312290742458_Initial.resx">
         <DependentUpon>202312290742458_Initial.cs</DependentUpon>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Migrations\202312301059022_NameLastNameAddedToUser.resx">
+        <DependentUpon>202312301059022_NameLastNameAddedToUser.cs</DependentUpon>
       </EmbeddedResource>
     </ItemGroup>
     <PropertyGroup>
