--- a/EExamWebApp/EExamWebApp.csproj
+++ b/EExamWebApp/EExamWebApp.csproj
@@ -147,11 +147,9 @@
         <Compile Include="Controllers\AccountController.cs"/>
         <Compile Include="Controllers\AdminController.cs"/>
         <Compile Include="Controllers\BaseController.cs"/>
-        <Compile Include="Controllers\CourseController.cs"/>
         <Compile Include="Controllers\CoursesController.cs"/>
         <Compile Include="Controllers\EnrollmentsController.cs"/>
         <Compile Include="Controllers\ErrorController.cs"/>
-        <Compile Include="Controllers\ExamController.cs"/>
         <Compile Include="Controllers\ExamsController.cs"/>
         <Compile Include="Controllers\HomeController.cs"/>
         <Compile Include="Controllers\OptionsController.cs"/>
@@ -190,12 +188,21 @@
         <Compile Include="Migrations\202401050940549_ExamIdAddedQuestion.Designer.cs">
             <DependentUpon>202401050940549_ExamIdAddedQuestion.cs</DependentUpon>
         </Compile>
+        <Compile Include="Migrations\202401051535306_AddedResultAndEnrollmentFinalScore.cs" />
+        <Compile Include="Migrations\202401051535306_AddedResultAndEnrollmentFinalScore.Designer.cs">
+          <DependentUpon>202401051535306_AddedResultAndEnrollmentFinalScore.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Migrations\202401051538480_ResultTableAdded.cs" />
+        <Compile Include="Migrations\202401051538480_ResultTableAdded.Designer.cs">
+          <DependentUpon>202401051538480_ResultTableAdded.cs</DependentUpon>
+        </Compile>
         <Compile Include="Migrations\Configuration.cs"/>
         <Compile Include="Models\Course.cs"/>
         <Compile Include="Models\Enrollment.cs"/>
         <Compile Include="Models\Exam.cs"/>
         <Compile Include="Models\Option.cs"/>
         <Compile Include="Models\Question.cs"/>
+        <Compile Include="Models\Result.cs" />
         <Compile Include="Models\User.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="Seeders\DbInitializer.cs"/>
@@ -338,6 +345,12 @@
         </EmbeddedResource>
         <EmbeddedResource Include="Migrations\202401050940549_ExamIdAddedQuestion.resx">
             <DependentUpon>202401050940549_ExamIdAddedQuestion.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="Migrations\202401051535306_AddedResultAndEnrollmentFinalScore.resx">
+          <DependentUpon>202401051535306_AddedResultAndEnrollmentFinalScore.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="Migrations\202401051538480_ResultTableAdded.resx">
+          <DependentUpon>202401051538480_ResultTableAdded.cs</DependentUpon>
         </EmbeddedResource>
     </ItemGroup>
     <PropertyGroup>
